# IMT-Style-Transfer

./: pyproject.toml  requirements.txt
script/: imt_train.py
script/utility/: format_output.py  prepare_dataset.py
