[tool.poetry]
name = "imt-style-transfer"
version = "0.1.0"
description = "Unsupervised text style transfer training suite with OpenNMT"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "~1.14"  # use 1.14 to avoid installing functools32
tensorflow-hub = "~0.4"
torch = "~1.2"
torchtext = "~0.4"
torchvision = "~0.3"
Cython = "~0.29"
fasttext = "~0.8"
spacy = "~2.2"
thinc = "~7.3"
annoy = "~1.16"
numpy = "~1.16"
PyYAML = "~5.1"
ConfigArgParse = "~0.14"
tqdm = "^4.30"
wmd = "~1.3"
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.2.5/en_core_web_md-2.2.5.tar.gz" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
